--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -214,7 +214,7 @@
     \end{tabular}        
     \caption{Determinant of a Cromwell matrix of Trefoil}
   \end{figure}
-  $\mathbf{Theorem\ 2.}$ Let $M$ be a THC-Cromwell matrice of $\theta$-curve or handcuff graph, and let det*($M$) be the determinant of H-deletion matrix of $M$. Then, \\
+  $\mathbf{Theorem\ 2.}$ Let $M$ be a THC-Cromwell matrix of $\theta$-curve or handcuff graph, and let det*($M$) be the determinant of H-deletion matrix of $M$. Then, \\
 		\begin{itemize}
 			\item det*($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
 			\item det*($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
