--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -223,7 +223,7 @@
    % \centering
     %\includegraphics[height=8.5cm]{figure/table.png}
   %\end{figure}
-  
+  \vspace*{-1cm}
   \begin{figure}[h]
   \centering
 	\begin{tabular}{cccc}
@@ -238,14 +238,14 @@
   \end{tabular}
   \caption{Determinant of a $\thata$-curve : Line-shap and T-shape}
   \end{figure}
-
+  \vspace*(-1cm)
   \begin{figure}[h]
   \centering
 	\begin{tabular}{cccc}
-    \includegraphics[width=0.25\textwidth]{figure/Line-shape.png} &
-    \includegraphics[width=0.25\textwidth]{figure/matrix4.png} &
-    \includegraphics[width=0.21\textwidth]{figure/matrix5.png} &
-    \includegraphics[width=0.23\textwidth]{figure/matrix6.png} \\
+    \includegraphics[width=0.25\textwidth]{figure/hand.png} &
+    \includegraphics[width=0.25\textwidth]{figure/matrix10.png} &
+    \includegraphics[width=0.22\textwidth]{figure/matrix11.png} &
+    \includegraphics[width=0.23\textwidth]{figure/matrix12.png} \\
   \end{tabular}
   \caption{Determinant of a Handcuff graph}
   \end{figure}
