--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -1,3 +1,4 @@
+% !TEX program = lualatex 
 % Unofficial University of Cambridge Poster Template
 % https://github.com/andiac/gemini-cam
 % a fork of https://github.com/anishathalye/gemini
@@ -223,7 +224,6 @@
    % \centering
     %\includegraphics[height=8.5cm]{figure/table.png}
   %\end{figure}
-  \vspace*{-1cm}
   \begin{figure}[h]
   \centering
 	\begin{tabular}{cccc}
@@ -238,13 +238,12 @@
   \end{tabular}
   \caption{Determinant of a $\theta$-curve : Line-shape and T-shape}
   \end{figure}
-  \vspace*(-1cm)
   \begin{figure}[h]
   \centering
 	\begin{tabular}{cccc}
-    \includegraphics[width=0.25\textwidth]{figure/hand.png} &
+    \includegraphics[width=0.23\textwidth]{figure/T-loop.png} &
     \includegraphics[width=0.25\textwidth]{figure/matrix10.png} &
-    \includegraphics[width=0.22\textwidth]{figure/matrix11.png} &
+    \includegraphics[width=0.24\textwidth]{figure/matrix11.png} &
     \includegraphics[width=0.23\textwidth]{figure/matrix12.png} \\
   \end{tabular}
   \caption{Determinant of a Handcuff graph}
