--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -320,12 +320,12 @@
 
   \begin{block}{References}
 {\small
-    \begin{enumerate}
+    \begin{description}
       \item[1] Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
       \item[2] Yoonsang Lee. (2023). A Study on Arc Index of Theta-Curves. Korea Science Academy of KAIST
       \item[3] Minjung Lee, Sungjong No, and Seungsang Oh. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
       \item[4] Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.      
-    \end{enumerate}
+    \end{description}
 }
 	% \TINY
 	% \bibliographystyle{apalike}
