--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -4,7 +4,7 @@
 	\begin{thm}
 		Let $G$ be any spatial graph. Then,
         \[ \alpha(G) \le c(G) + e + b \]
-		where $e, b$ are the number of edges and bouquet cut.
+		where $e, b$ are the number of edges and bouquet cut, respectively.
 	\end{thm}
 
 	\begin{corollary}
