--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -117,6 +117,7 @@
 % \begin{columns}[t]
 % \separatorcolumn
 
+\begin{frame}[t]
 % \begin{column}{\colwidth}
 \begin{columns}[t]
   \column{0.33\textwidth}
@@ -141,8 +142,7 @@
   \begin{block}{Diagrams}
     %\caption{An algorithm with caption}\label{alg:cap}
     \begin{itemize} 
-      \item \textbf{Grid diagram}
-      \item \textbf{Arc presentation}
+      \item \textbf{Grid diagram and Arc presentation}
       \vspace*{-2cm}
       \begin{figure}[h]
         \centering
@@ -337,4 +337,5 @@
 
 \include{grid}
 
+\end{frame}
 \end{document}
