--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -257,7 +257,7 @@
   \end{equation*}
   where $\alpha(G)$, $c(G)$ are arc index and crossing number of $G$, $e$ is the number of edges, and $b$ is the number of bouquet cut-components, repsectively.
   
-  $\mathbf{Corollary\ 4.}$ For non-trivial handcuff graph $H$,
+  $\mathbf{Corollary\ 4.}$ For non-split handcuff graph $H$,
   \begin{equation*}
     \alpha(H) \leq c(H) + 3.
   \end{equation*}
