--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -255,7 +255,7 @@
   \begin{equation*}
     \alpha(G) \leq c(G) + e + b
   \end{equation*}
-  where $\alpha(G)$, $c(G)$ are arc index and crossing number of $G$, $e$ is the number of edges, and $b$ is the number of bouquet cut-components, repsectively.
+  where $\alpha(G)$, $c(G)$ are arc index and crossing number of $G$, and $e, b$ are the number of edges and bouquet cut-components, repsectively.
   
   $\mathbf{Corollary\ 4.}$ For non-split handcuff graph $H$,
   \begin{equation*}
@@ -301,7 +301,7 @@
     \textbf{Yamada polynomial} of $G$, $R(G)$, is defined by
     \[ R(G)(x) = h(G)(-1, -x-2-x^{-1}). \]
     
-    $\mathbf{Theorem\ 7.}$ Let $S_T$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph, and let $c, n$ be the number of caps and crossings in $S_T$, respectively. Then,
+    $\mathbf{Theorem\ 7.}$ Let $S_T$ be a simple closure of stacked tangle of a $\theta$-curve or handcuff graph, and $c, n$ be the number of caps and crossings in $S_T$, respectively. Then,
      \[ \mathrm{spr}(R(S_T)) \leq c+2n \]
      where $\mathrm{spr}(f)$ denotes the difference between the maximal and minimal degrees of $f$. 
 
