--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -153,9 +153,8 @@
 	Let $T$ be any $\theta$-curve or handcuff graph.
 	Then
 	\[
-		2 + \sqrt{\max\deg_xR(S_T) - \min\deg_xR(S_T) - 4} \le \alpha(T)
+		2 + \sqrt{\max\deg_xR(S_T) - \min\deg_xR(S_T) - 4} \le \alpha(T).
 	\]
-	where $R(T)$ is a Yamada Polynomial of $T$.
 	\end{thm}	
 
 	\mypf
