--- a/FInal_Poster/grid.tex
+++ b/FInal_Poster/grid.tex
@@ -365,8 +365,7 @@
     \caption{$7_{65}$} 
     \end{subfigure}
   \end{figure}
-
-
+\vspace*{-1.5cm}
   \end{alertblock}
 \end{column}
 \begin{column}{0.3\textwidth}
@@ -564,6 +563,7 @@
     \includegraphics[width=1.5cm]{../Final_Poster/grid_diagram/handcuff_7_36.png}
     \caption{$7_{36}$} 
     \end{subfigure}
+    \vspace*{-1.5cm}
   \end{figure}
   \end{alertblock}
   \end{column}
