--- a/2025R&Eppt/Result.tex
+++ b/2025R&Eppt/Result.tex
@@ -367,7 +367,7 @@
 \end{figure}
 \end{frame}
 
-\begin{frame}{Grid Diagrams of Handcuff-Graphs}
+\begin{frame}{Grid Diagrams of Handcuff Graphs}
 \begin{figure}
     \centering
     \begin{subfigure}[b]{0.075\textwidth}
