--- a/2025R&Eppt/U_Bound.tex
+++ b/2025R&Eppt/U_Bound.tex
@@ -1,7 +1,7 @@
 \section{Upper Bounds of Arc Index}
 
 \begin{frame}{Upper Bounds of Arc Index}
-	\begin{thm}
+	\begin{thm}[Lee et al., 2018]
 		Let $G$ be any spatial graph. Then,
         \[ \alpha(G) \le c(G) + e + b \]
 		where $e, b$ are the number of edges and bouquet cut, respectively.
