--- a/2025R&Eppt/Further Research.tex
+++ b/2025R&Eppt/Further Research.tex
@@ -1,5 +1,5 @@
-\section{Further Study}
-\begin{frame}{Further Study}
+\section{Further Studies}
+\begin{frame}{Further Studies}
     \begin{itemize}
         \item We tried to use the Python for determining arc indices.
         For the Python program, we used the Topoly package, but the package had an error.
