--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -150,7 +150,6 @@
     \begin{itemize} 
       \item \textbf{Grid diagram and Arc presentation}
     \end{itemize}
-      \vspace*{-2cm}
       \begin{figure}[h]
         \centering
         \begin{tabular}{cc}
@@ -332,12 +331,12 @@
 
   \end{block}
 
-  \begin{block}{Further Studies}
-    \begin{itemize}
-      \item Using another tool to completely determine the arc indices of $\theta$-curves and handcuff graphs, such as Yamada package.
-      \item Applying the result of our research to $\theta$-curves or handcuff graphs of higher crossings or to other spatial graphs.
-    \end{itemize}
-  \end{block}
+  % \begin{block}{Further Studies}
+  %   \begin{itemize}
+  %     \item Using another tool to completely determine the arc indices of $\theta$-curves and handcuff graphs, such as Yamada package.
+  %     \item Applying the result of our research to $\theta$-curves or handcuff graphs of higher crossings or to other spatial graphs.
+  %   \end{itemize}
+  % \end{block}
 
   \begin{block}{References}
 {\small
