--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -133,6 +133,7 @@
 \include{L_Bound.tex}
 \include{Result.tex}
 \include{Further Research.tex}
+\include{reference.tex}
 
 % \begin{frame}[standout,plain]
 % 	\TINY
