--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -96,12 +96,12 @@
 			\max\deg_x R(S_G) \le c + n, \quad
 			\min\deg_x R(S_G) \ge -(c + n),
 		\]
-		where \myem{$c, n$} is the number of caps and crossings in $S_G$, respectively.
+		where \myem{$c$} and \myem{$n$} is the number of caps and crossings in $S_G$, respectively.
 	\end{prop}
 
 	\mypf
 	\begin{itemize}
-		\item Let \myem{$c_s, c_{ss}$} be the number of \myem{simlpe caps} or \myem{semi-simple caps}, repectively.
+		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simlpe caps} or \myem{semi-simple caps}, repectively.
 		\item Use double mathematical induction of $(c_s + c_{ss}, n)$.
         $$\includegraphics[width=.35\linewidth]{simplecap.png}$$
 	\end{itemize}
