--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -138,18 +138,20 @@
     \begin{itemize}
       \item \textbf{Handcuff graph}
     \end{itemize}
+    \vspace*{-1cm}
       \begin{figure}[h]
       \centering
       \includegraphics[width=\textwidth]{figure/handcufflist.png}
       \end{figure}
     \vspace*{-1cm}
   \end{block}
-
+  \vfill
   \begin{block}{Diagrams}
     %\caption{An algorithm with caption}\label{alg:cap}
     \begin{itemize} 
       \item \textbf{Grid diagram and Arc presentation}
     \end{itemize}
+    \vspace*{-1cm}
       \begin{figure}[h]
         \centering
         \begin{tabular}{cc}
@@ -164,6 +166,7 @@
     \vspace*{-1cm}
   \end{block}
     
+  \vfill
 
 
   \begin{block}{Matrices of $\theta$-Curves and Handcuff Graphs}
@@ -172,7 +175,7 @@
     \item \textbf{THC-Cromwell matrix} :\\expansion of Cromwell matrix into $\theta$-curves and handcuff graphs
     \item \textbf{H-deletion matrix}
   \end{itemize}
-
+  \vspace*{-1cm}
   \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{figure/Hdeletion.png}
@@ -234,6 +237,7 @@
    % \centering
     %\includegraphics[height=8.5cm]{figure/table.png}
   %\end{figure}
+  \vspace*{0.5cm}
   \begin{figure}[h]
   \centering
 	\begin{tabular}{cccc}
@@ -262,8 +266,10 @@
   \caption{Determinant of a Handcuff graph}
   \vspace*{-1.5cm}
   \end{figure}
-
+  \vspace*{0.5cm}
   \end{block}
+
+  \vfill
   
   \begin{block}{Upper Bounds of Arc Index}
   $\mathbf{Notation.}$
@@ -309,7 +315,6 @@
 
   \end{block}
 
-  
   \column{0.33\textwidth}
   \begin{block}{Lower Bounds of Arc Index}
     
@@ -334,7 +339,7 @@
      \[ \alpha(G) \ge 2 + \sqrt{\mathrm{spr}(R(S_G)) - 4}. \]
     \vspace*{-1.5cm}
   \end{block}
-
+  \vfill
   \begin{block}{Further Studies}
     \begin{itemize}
       \item Completely determine the arc indices.
@@ -342,7 +347,7 @@
     \end{itemize}
     \vspace*{-1cm}
   \end{block}
-
+  \vfill
   \begin{block}{References}
 {\small
     \begin{description}
