--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -171,7 +171,7 @@
 
   \begin{block}{Matrices of $\theta$-Curves and Handcuff Graphs}
   \begin{itemize}
-    \item \textbf{Cromwell matrix} :\\an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s
+    \item \textbf{Cromwell matrix} :\\an $n\times n$ binary matrix each of whose rows and columns has exactly two 1s corresponding a grid diagram of a knot
     \item \textbf{THC-Cromwell matrix} :\\expansion of Cromwell matrix into $\theta$-curves and handcuff graphs
     \item \textbf{H-deletion matrix}
   \end{itemize}
