--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -2,7 +2,7 @@
 
 \begin{frame}{Lower Bound from Constituent Knots/Links}
 	\begin{thm}[Lee, 2023]
-		Let $T$ be any $\theta$-curve
+		Let $T$ be a $\theta$-curve
 		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
 		Then
 		\[
@@ -11,7 +11,7 @@
 	\end{thm}
 	
 	\begin{thm}[Lee, 2023]
-		Let $T$ be any $\theta$-curve
+		Let $T$ be a $\theta$-curve
 		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
 		Then
 		\[
@@ -23,7 +23,7 @@
 \begin{frame}{Lower Bound from Constituent Knots/Links}
 	\bigskip
 	\begin{thm}
-		Let $H$ be any handcuff graph, and $L$ be the constituent link of $H$.
+		Let $H$ be a handcuff graph, and $L$ be the constituent link of $H$.
 		If $L$ is an alternating and non-split link, then
 		\[
 			\alpha(H) \ge c(L) + 3.
@@ -31,7 +31,7 @@
 	\end{thm}
 
 	\begin{corollary}
-		Let $H$ be any handcuff graph, and $L$ be a constituent link of $T$. If $L$ is alternating and non-split,
+		Let $H$ be a handcuff graph, and $L$ be a constituent link of $T$. If $L$ is alternating and non-split,
 		\[
 			\alpha(H) = c(L) + 3.
 		\]
@@ -79,7 +79,7 @@
 
 \begin{frame}{Lower Bound from Yamada Polynomial}
 	\begin{thm}
-	Let $G$ be any $\theta$-curve or handcuff graph.
+	Let $G$ be a $\theta$-curve or handcuff graph.
 	Then
 	\[
 		2 + \sqrt{\max\deg_xR(S_G) - \min\deg_xR(S_G) - 4} \le \alpha(G).
@@ -101,7 +101,7 @@
 
 	\mypf
 	\begin{itemize}
-		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simlpe caps} or \myem{semi-simple caps}, repectively.
+		\item Let \myem{$c_s$} and \myem{$c_{ss}$} be the number of \myem{simlpe caps} and \myem{semi-simple caps}, repectively.
 		\item Use double mathematical induction of $(c_s + c_{ss}, n)$.
         $$\includegraphics[width=.35\linewidth]{simplecap.png}$$
 	\end{itemize}
@@ -157,7 +157,7 @@
 
 \begin{frame}{Proof of Theorem}
 	\begin{thm}
-	Let $G$ be any $\theta$-curve or handcuff graph.
+	Let $G$ be a $\theta$-curve or handcuff graph.
 	Then
 	\[
 		2 + \sqrt{\max\deg_xR(S_G) - \min\deg_xR(S_G) - 4} \le \alpha(G).
